--- a/src/css/style.css
+++ b/src/css/style.css
@@ -312,11 +312,10 @@ body {
   display: inline-block;
   margin: 0 1.5rem;
 }
-.nav-horizontal__link {
+.nav-horizontal__link, .nav-horizontal__link:link, .nav-horizontal__link:visited {
+  user-select: none;
   border-radius: 0.3rem;
   font-size: 1.6rem;
-}
-.nav-horizontal__link:link, .nav-horizontal__link:visited {
   color: #575a58;
   text-decoration: none;
   text-transform: uppercase;
@@ -331,6 +330,7 @@ body {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   padding-top: 2rem;
   padding-bottom: 2rem;
+  cursor: pointer;
 }
 .nav-horizontal__actions-box {
   display: flex;
