--- a/src/sass/components/_nav-horizontal.scss
+++ b/src/sass/components/_nav-horizontal.scss
@@ -47,11 +47,13 @@
     }
 
     &__link {
-        border-radius: .3rem;
-        font-size: 1.6rem;
 
+        &,
         &:link,
         &:visited {
+            user-select: none;
+            border-radius: .3rem;
+            font-size: 1.6rem;
             color: $color-grey-dark-3;
             text-decoration: none;
             text-transform: uppercase;
@@ -68,6 +70,7 @@
             box-shadow: 0 1rem 2rem rgba($color-black, .2);
             padding-top: 2rem;
             padding-bottom: 2rem;
+            cursor: pointer;
         }
     }
 
