--- a/src/css/style.css
+++ b/src/css/style.css
@@ -339,9 +339,21 @@ body {
   font-size: 1.5rem;
   margin-right: 2rem;
 }
+.nav-horizontal__actions-box span {
+  padding: 0 auto;
+}
 .nav-horizontal__actions-box button {
+  position: relative;
   text-transform: uppercase;
-  padding-right: 0.5rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  text-align: center;
+  padding: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.nav-horizontal__actions-box button:active {
+  background-color: rgba(255, 255, 255, 0.7) !important;
+  transform: none;
 }
 .nav-horizontal__action-link {
   display: inline-block;
@@ -365,6 +377,14 @@ body {
 .nav-horizontal__action-link--cta:hover {
   color: #f08822;
   text-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+.nav-horizontal__flag-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .feature__card {
