--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -20,3 +20,4 @@ $color-grey-dark-5: #2d302e;
 $color-white: #fff;
 $color-black: #000;
 $color-red: #ea704e;
+$color-blue: #05c1dc; // Also try these #00c3d0, #02c4c4, #00c6b8
